--- a/client/src/components/chatContainer/chatContainer.css
+++ b/client/src/components/chatContainer/chatContainer.css
@@ -4,9 +4,9 @@
     gap: 0.1rem;
     overflow: hidden;
 
-    @media screen and (min-width: 720px) and (max-width: 1080px) {
+    /* @media screen and (min-width: 720px) and (max-width: 1080px) {
         grid-template-rows: 15% 70% 15%;
-    }
+    } */
 }
 
 .chatcon-chat-header {
@@ -60,9 +60,9 @@
         font-size: 1.1rem;
         border-radius: 1rem;
         color: #d1d1d1;
-        @media screen and (min-width: 720px) and (max-width: 1080px) {
+        /* @media screen and (min-width: 720px) and (max-width: 1080px) {
           max-width: 70%;
-        }
+        } */
 }
 
 .chatcon-sended {
