--- a/client/src/components/chatInput/chatInput.css
+++ b/client/src/components/chatInput/chatInput.css
@@ -5,10 +5,10 @@
     background-color: #080420;
     padding: 0 2rem;
 
-    @media screen and (min-width: 720px) and (max-width: 1080px) {
+    /* @media screen and (min-width: 720px) and (max-width: 1080px) {
         padding: 0 1rem;
         gap: 1rem;
-    }
+    } */
 }
 
 .chatInput-button-container {
@@ -94,9 +94,9 @@
     background-color: #9a86f3;
     border: none;
 
-    @media screen and (min-width: 720px) and (max-width: 1080px) {
+    /* @media screen and (min-width: 720px) and (max-width: 1080px) {
         padding: 0.3rem 1rem;
-    }
+    } */
 }
 
 .chatInput-input-container svg {
